# arrow2-convert

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
arrow2_convert/: Cargo.toml
arrow2_convert/benches/: bench.rs
arrow2_convert/src/: Notes.md  deserialize.rs  field.rs  lib.rs  nullable.rs  physical_type.rs  serialize.rs
arrow2_convert/src/deserialize/: array_adapter_impls.rs  field_impls.rs  mod.rs
arrow2_convert/tests/: complex_example.rs  simple_example.rs  test_deserialize.rs  test_enum.rs  test_flatten_chunk.rs  test_hygeine.rs  test_macro_errors.rs  test_round_trip.rs  test_schema.rs  test_serialize.rs  test_struct.rs
arrow2_convert/tests/ui/: derive_on_trait.rs  derive_on_trait.stderr  struct_incorrect_override.rs  struct_incorrect_override.stderr  struct_incorrect_type.rs  struct_incorrect_type.stderr  struct_no_fields.rs  struct_no_fields.stderr
arrow2_convert_derive/: Cargo.toml
arrow2_convert_derive/src/: _struct.rs  attr.rs  derive_enum.rs  derive_struct.rs  input.rs  lib.rs
derive-internal/: Cargo.toml
derive-internal/src/: input.rs  lib.rs  parse.rs  vec.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: deserialize.rs  field.rs  lib.rs  serialize.rs
tests/: complex_example.rs  example.rs  example1.rs  simple_example.rs
