[package]
name = "arrow2-derive"
version = "0.1.0"
authors = ["Jorge Leitao <jorgecarleitao@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
keywords = ["Arrow"]

[workspace]
members = [
    "derive-internal",
]

[dependencies]
derive-internal = {path = "derive-internal"}
arrow2 = { version = "0.9.1", default-features = false }
chrono = { version = "0.4", default_features = false, features = ["std"] }
err-derive = "0.3"
