[package]
name = "arrow2_convert"
version = "0.1.0"
authors = [
    "Jorge Leitao <jorgecarleitao@gmail.com>",
    "Chandra Penke <chandrapenke@gmail.com>"
]
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = ["Arrow", "arrow2"]
repository = "https://github.com/DataEngineeringLabs/arrow2-derive/arrow2_convert"
description = "Convert between nested rust types and Arrow with arrow2"

[dependencies]
arrow2 = { version = "0.9.1", default-features = false }
arrow2_convert_derive = { version = "0.1.0", path = "../arrow2_convert_derive", optional = true }
chrono = { version = "0.4", default_features = false, features = ["std"] }
err-derive = "0.3"
trybuild = "1.0"

[dev-dependencies]
arrow2_convert_derive = { version = "0.1.0", path = "../arrow2_convert_derive" }

[features]
default = [ "derive" ]
derive = [ "arrow2_convert_derive" ]
